# Copyright 2018 Jonathan Dong. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import ("$mutual_binding_root/common/config.gni")

group("mutual-binding") {
  testonly = true

  public_deps = [
    "//third_party/dart:runtime",
  ]
}

config("config") {
  include_dirs = [".."]
}
