# Copyright 2018 Jonathan Dong. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import ("$mutual_binding_root/common/config.gni")
import ("//v8/gni/v8.gni")
import ("//v8/snapshot_toolchain.gni")

group("mutual-binding") {
  testonly = true

  public_deps = [
    "//third_party/dart:runtime",
    "//v8:gn_all",
  ]
}

config("config") {
  include_dirs = [".."]

  if ((current_cpu == "arm" || current_cpu == "arm64") && is_android && is_clang) {
    import("//build/config/android/config.gni")
    include_dirs += [ "$android_ndk_include_dir" ]
  }
}
