# Copyright 2018 Jonathan Dong. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("config.gni")

config("mutual_binding_config") {
  defines = feature_defines_list
}

source_set("common") {
  public_configs = [
    ":mutual_binding_config",
    "$mutual_binding_root:config",
  ]
}
